@@ -31,6 +31,7 @@ Config::Config()
 	startlevel = 0;
 	rel_warp_limit = 80;
 	add_bonus_levels = 1;
+	freakout_seed = 1;
 	/* controls */
 	k_left = SDL_SCANCODE_LEFT;
 	k_right = SDL_SCANCODE_RIGHT;
@@ -104,6 +105,7 @@ Config::Config()
 	fp.get( "starting_level", startlevel );
 	fp.get( "rel_warp_limit", rel_warp_limit );
 	fp.get( "add_bonus_levels", add_bonus_levels );
+	fp.get( "freakout_seed", freakout_seed );
 	fp.get( "left", k_left );
 	fp.get( "right", k_right );
 	fp.get( "fire_left", k_lfire );
@@ -162,6 +164,7 @@ void Config::save()
 	ofs << "starting_level=" << startlevel << "\n";
 	ofs << "rel_warp_limit=" << rel_warp_limit << "\n";
 	ofs << "add_bonus_levels=" << add_bonus_levels << "\n";
+	ofs << "freakout_seed=" << freakout_seed << "\n";
 	ofs << "left=" << k_left << "\n";
 	ofs << "right=" << k_right << "\n";
 	ofs << "fire_left=" << k_lfire << "\n";
